force-app/main/default/objects/Product_Version__c/Product_Version__c.object-meta.xml
<CustomObject>
    <label>Product Version</label>
    <nameField>
        <label>Product Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>