force-app/main/default/objects/Product_Version__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>