force-app/main/default/objects/Product_Version__c/fields/Version_URL__c.field-meta.xml
<CustomField>
    <fullName>Version_URL__c</fullName>
    <label>Version URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>